add trade to nav-bar

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -48,6 +48,9 @@
 	<!-- Customer -->
 	<script src="app/customer/customer.ctrl.js"></script>
 	<script src="app/customer/customer.service.js"></script>
+	<!-- Trade -->
+	<script src="app/trade/trade_system.ctrl.js"></script>
+	<script src="app/trade/trade_sysytem.service.js"></script>
 	<!-- Product -->
 	<script src="app/prod/prod.ctrl.js"></script>
 	<script src="app/prod/prod.service.js"></script>
