--- a/src/main/webapp/app/report/report.view.html
+++ b/src/main/webapp/app/report/report.view.html
@@ -23,7 +23,7 @@
 <body ng-cloak>
 	<div class="container-fluid container-margin"
 		ng-controller="ReportCtrl as vm" ng-init="vm.resetPage()">
-
+		<div flash-message="4000" class="text-center"></div>
 		<form class="form-horizontal form-margin">
 			<div class="col-md-12">
 				<div class="col-md-6">
@@ -179,27 +179,32 @@
 				</div>
 			</div>
 			<div class="col-md-12">
-				<table st-table="displayedProdType" wt-responsive-table
-					st-safe-src="vm.prodTypeList"
+				<table st-table="displayedOrder" wt-responsive-table
+					st-safe-src="vm.orderList"
 					class="table table-striped table-bordered">
 					<thead>
 						<tr>
-							<th class="text-center" st-sort="typeCode">รหัสประเภท</th>
-							<th class="text-center" st-sort="typeName">ชื่อประเภท</th>
+							<th class="text-center" st-sort="orderCode">รหัสสั่งซื้อ</th>
+							<th class="text-center" st-sort="orderNet">ราคารวม</th>
+							<th class="text-center" st-sort="customer.custName">ชื่อลูกค้า</th>
+							<th class="text-center" st-sort="empInfo.empName">ชื่อพนักงาน</th>
+							<th class="text-center" st-sort="orderDate">วันที่</th>
 							<th></th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="prodType in displayedProdType">
-							<td class="text-center">{{prodType.typeCode}}</td>
-							<td class="text-center">{{prodType.typeName}}</td>
+						<tr ng-repeat="order in displayedOrder">
+							<td class="text-center">{{order.orderCode}}</td>
+							<td class="text-center">{{order.orderNet}}</td>
+							<td class="text-center">{{order.customer.custName}}</td>
+							<td class="text-center">{{order.typeName}}</td>
+							<td class="text-center">{{order.orderDate}}</td>
 							<td class="text-center"><button class="btn btn-info"
-									ng-click="vm.update(prodType)">
-									<fa name="edit"></fa>
-								</button>
-
-								<button class="btn btn-danger" ng-click="vm.remove(prodType.id)">
-									<fa name="trash-o"></fa>
+									ng-bootbox-custom-dialog
+									ng-bootbox-custom-dialog-template="common/partials/order-info.html"
+									ng-bootbox-options="vm.viewOrderInfoModal"
+									ng-click="vm.orderViewInfo(order)">
+									<fa name="search"></fa>
 								</button></td>
 						</tr>
 					</tbody>
