--- a/src/main/webapp/app/trade/trade_system.view.html
+++ b/src/main/webapp/app/trade/trade_system.view.html
@@ -104,7 +104,7 @@
 			</div>
 		</form>
 
-		<!-- Product_type Table -->
+		<!-- Trade Table -->
 
 		<div class="col-md-12">
 			<div class="pull-right">
