--- a/src/main/webapp/app/report/report.view.html
+++ b/src/main/webapp/app/report/report.view.html
@@ -76,8 +76,8 @@
 											<fa name="search" size="1"></fa>
 										</button>
 									</span> <span class="input-group-btn"><button title="Reset"
-											ng-click="vm.order.empInfo = null ; vm.order.empInfo.empCode = null" class="btn btn-default"
-											type="button">
+											ng-click="vm.order.empInfo = null ; vm.order.empInfo.empCode = null"
+											class="btn btn-default" type="button">
 											<fa name="remove" size="1"></fa>
 										</button></span>
 								</div>
@@ -100,8 +100,8 @@
 											<fa name="search" size="1"></fa>
 										</button>
 									</span> <span class="input-group-btn"><button title="Reset"
-											ng-click="vm.order.customer = null ; vm.order.customer.custCode = null" class="btn btn-default"
-											type="button">
+											ng-click="vm.order.customer = null ; vm.order.customer.custCode = null"
+											class="btn btn-default" type="button">
 											<fa name="remove" size="1"></fa>
 										</button></span>
 								</div>
@@ -157,7 +157,8 @@
 							</button>
 						</div>
 						<div class="col-md-1 text-center">
-							<button class="btn btn-default" type="reset" ng-click="vm.resetPage()">
+							<button class="btn btn-default" type="reset"
+								ng-click="vm.resetPage()">
 								<fa name="remove" size="1" title="Reset"></fa>
 								ยกเลิก
 							</button>
@@ -167,7 +168,12 @@
 			</form>
 		</div>
 		<div ng-hide="chart"></div>
-		<div ng-show="chart">Chart</div>
+		<div ng-show="chart">
+			<div>
+				<fusioncharts width="600" height="400" type="pie3d"
+					datasource="{{myDataSource}}"></fusioncharts>
+			</div>
+		</div>
 
 
 		<!-- Report Table -->
@@ -242,6 +248,7 @@
 	<script src="./app/app.config.js">
 		
 	</script>
+
 	<script src="./app/report/report.ctrl.js"></script>
 	<script src="./app/report/report.service.js"></script>
 	<!-- BOOTSTRAP -->
