--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app.login">
+<html>
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE-edge" />
 <meta charset="UTF-8">
@@ -19,50 +19,57 @@
 <!-- Angular Js -->
 <script src="assets/js/angular.min.js"></script>
 </head>
-<body ng-cloak>
+<body>
 
-	<div ng-controller="loginCtrl as vm">
-		<div class="login-container">
-			<div class="login-card">
-				<div class="login-form">
-					<form class="form-horizontal form-group " name="f"
-						action='/project/login' method='POST'>
-						<div class="col-md-offset-4">
-							<div class="input-group input-sm  col-md-4">
-								<label class="input-group-addon" for="username"><i
-									class="fa fa-user"></i></label> <input type="text" class="form-control"
-									name='username' placeholder="Enter Username" required value="">
+	<div class="container container-table">
+		<div class="row vertical-center-row">
+			<div class="col-md-5 col-md-offset-3">
+				<div class="panel panel-primary">
+					<div class="panel-heading ">
+						<strong>Login System </strong>
+					</div>
+					<div class="panel-body">
+					<div class="col-md-offset-5">
+						<span class="glyphicon glyphicon-user "></span></div>
+						<form class="form-horizontal form-group form-margin " name="f"
+							action='/project/login' method='POST'>
+							<div class="col-md-12">
+							<div class="form-group">
+								<div class="input-group input-sm col-md-offset-1 col-md-10">
+									<label class="input-group-addon" for="username"><i
+										class="fa fa-user"></i></label> <input type="text"
+										class="form-control" name='username'
+										placeholder="Enter Username" required value="">
+								
+								</div>
+								
+								<div class="input-group input-sm col-md-offset-1 col-md-10">
+									<label class="input-group-addon" for="password"><i
+										class="fa fa-lock"></i></label> <input type="password"
+										class="form-control" name="password" value=""
+										placeholder="Enter Password" required>
+								</div>
+</div>
+								<div class="form-actions col-md-offset-2 col-md-4  ">
+									<input type="submit"
+										class="btn btn-block btn-primary btn-default" value="Log in">
+								</div>
+								<div class="form-actions col-md-4">
+									<input type="reset"
+										class="btn btn-block btn-primary btn-default" value="Cancel">
+								</div>
 							</div>
-							<div class="input-group input-sm col-md-4">
-								<label class="input-group-addon" for="password"><i
-									class="fa fa-lock"></i></label> <input type="password"
-									class="form-control" name="password" value=""
-									placeholder="Enter Password" required>
-							</div>
-
-							<div class="form-actions col-md-2">
-								<input type="submit"
-									class="btn btn-block btn-primary btn-default" value="Log in">
-							</div>
-							<div class="form-actions col-md-2">
-								<input type="reset"
-									class="btn btn-block btn-primary btn-default" value="Cancel">
-							</div>
-						</div>
-					</form>
-
-
+						</form>
+					</div>
+					<div class="panel-footer " align="right">
+						<b>Made By</b> Prawarut & Kitsana
+					</div>
 				</div>
 			</div>
 		</div>
-
 	</div>
-	<!-- APPLICATION -->
-	<script src="./app/app.js">
-		
-	</script>
-	<script src="./app/login/login.ctrl.js"></script>
-	<script src="./app/login/login.service.js"></script>
+
+
 	<!-- BOOTSTRAP -->
 	<script src="./assets/js/jquery.min.js"></script>
 	<script src="./assets/js/bootstrap.min.js"></script>
