--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -18,6 +18,8 @@
 	href="assets/css/angular-responsive-tables.min.css" />
 <!-- Angular Js -->
 <script src="assets/js/angular.min.js"></script>
+<!-- Export Excel -->
+<script src="./assets/exportToExcel/FileSaver.js" type="text/javascript"></script>
 </head>
 <body ng-cloak>
 	<header>
