add sweet alert

--- a/src/main/webapp/app/customer/customer.view.html
+++ b/src/main/webapp/app/customer/customer.view.html
@@ -182,7 +182,7 @@
 								<fa name="edit"></fa>
 							</button>
 
-							<button class="btn btn-danger" ng-click="vm.remove(cus.id)">
+							<button class="btn btn-danger" ng-click="vm.remove(cus)">
 								<fa name="trash-o"></fa>
 							</button></td>
 					</tr>
