--- a/src/main/webapp/app/prod/prod.view.html
+++ b/src/main/webapp/app/prod/prod.view.html
@@ -467,7 +467,7 @@
 								<fa name="edit"></fa>
 							</button>
 
-							<button class="btn btn-danger" ng-click="vm.remove(prod.id)">
+							<button class="btn btn-danger" ng-click="vm.remove(prod)">
 								<fa name="trash-o"></fa>
 							</button></td>
 					</tr>
