--- a/src/main/webapp/app/emp/emp.view.html
+++ b/src/main/webapp/app/emp/emp.view.html
@@ -208,7 +208,7 @@
 								<fa name="edit"></fa>
 							</button>
 
-							<button class="btn btn-danger" ng-click="vm.remove(emp.id)">
+							<button class="btn btn-danger" ng-click="vm.remove(emp)">
 								<fa name="trash-o"></fa>
 							</button></td>
 					</tr>
