no valid cancel

--- a/src/main/webapp/app/prod/prod.view.html
+++ b/src/main/webapp/app/prod/prod.view.html
@@ -105,7 +105,7 @@
 					<div class="col-md-1 text-center">
 						<button class="btn btn-default"
 							ng-click="vm.emp.id == null ? vm.resetForm() : vm.resetDefault()"
-							type="button" ng-disabled="vm.prodForm.$pristine">
+							type="button">
 							<fa name="remove" size="1" title="Reset"></fa>
 							ยกเลิก
 						</button>
@@ -233,192 +233,6 @@
 			</div>
 		</form>
 		</uib-tab>
-		
-		<!-- Import Product -->
-		
-		<uib-tab heading="{{vm.tabs[2].title}}"
-				active="vm.tabs[2].selected">
-			<form name="vm.importForm" class="form-horizontal form-margin " novalidate ng-submit="vm.importProd(vm.StockHistoryLog)" >
-				<!-- SEARCH BUTTON -->
-				<div class="form-group text-left ">
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label col-md-4">รหัสสินค้า: </label>
-							<div class="col-md-8">
-							<div class="input-group">
-								<input class="form-control" ng-model="vm.stockhistorylog.productId.prodName" readonly="readonly" required="required" />
-									<span class="input-group-btn">
-							<button type="button" = true" class="btn btn-default"
-								ng-click="vm.searchProductModal()" uib-tooltip="สินค้าที่เล็ง"
-								tooltip-placement="bottom" tooltip-trigger="mouseenter"
-								ng-bootbox-custom-dialog
-								ng-bootbox-custom-dialog-template="common/partials/select-product-dialog.tpl.html"
-								ng-bootbox-options="vm.viewProductViewOptions">
-								<fa name="search" size="1" title="search"></fa>
-							</button></span>
-							<span class="input-group-btn">
-							<button type="button" ng-click="vm.StockHistoryLog.productId = null "
-								class="btn btn-default ">
-								<fa name="remove" size="1" title="Reset"></fa>
-							</button></span>
-						</div>
-					</div>
-					</div>
-					</div>
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label col-md-4">จำนวน:</label>
-							<div class="col-md-3">
-								<input type="text" ng-model="vm.StockHistoryLog.amount" class="form-control"  />
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label col-md-4">รอบการนำเข้า:</label>
-							<div class="col-md-6">
-								<input type="text" class="form-control"
-									ng-model="vm.StockHistoryLog.lotNo"  />
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label col-md-4">รายละเอียด:</label>
-							<div class="col-md-8">
-								<textarea rows="4" ng-model="vm.StockHistoryLog.detail" type="text" class="form-control"></textarea>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label col-md-4">วันที่นำสินค้าเข้า:</label>
-							<div class="col-md-5">
-							<div class="input-group">
-								<input type="text" class="form-control"
-								 uib-datepicker-popup="dd-MM-yyyy"
-									is-open="vm.calendar.opened" ng-model="vm.StockHistoryLog.operationdate" readonly="readonly">
-									<span class="input-group-btn">
-									<button type="button" class="btn btn-default"
-											ng-click="vm.calDate($event)">
-											<i class="glyphicon glyphicon-calendar"></i>
-										</button>
-										</span>
-										</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-12">
-						<div class="form-group">
-							<div class="col-md-6  text-right">
-								<button class="btn btn-default" type="submit" ng-disabled="vm.importForm.$invalid ">
-									<fa name="save" size="1" title="save"></fa>
-									บันทึก
-								</button>
-							</div>
-							<div class="col-md-5 text-center">
-								<button class="btn btn-default" type="reset" ng-disabled="vm.importForm.$pristine" ng-click="vm.resetForm()">
-									<fa name="remove" size="1" title="Reset"></fa>
-									ยกเลิก
-								</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</form>
-			</uib-tab>
-			
-			<!-- Export Product -->
-			
-			<uib-tab heading="{{vm.tabs[3].title}}"
-				active="vm.tabs[3].selected">
-			<form name="vm.exportForm" class="form-horizontal form-margin "
-				novalidate ng-submit="vm.exportProd(vm.StockHistoryLog)">
-				<!-- SEARCH BUTTON -->
-				<div class="form-group text-left ">
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label col-md-4">รหัสสินค้า: </label>
-							<div class="col-md-8">
-								<div class="input-group">
-									<input class="form-control" ng-model="vm.StockHistoryLog.prodInfo.prodInfoName"
-										readonly="readonly" required="required" /> <span class="input-group-btn">
-										<button type="button" = true" class="btn btn-default"
-											ng-click="vm.findByProductview()" uib-tooltip="สินค้าเป้าหมาย"
-											tooltip-placement="bottom" tooltip-trigger="mouseenter"
-											ng-bootbox-custom-dialog
-											ng-bootbox-custom-dialog-template="common/partials/select-product-dialog.tpl.html"
-											ng-bootbox-options="vm.viewProductViewOptions">
-											<fa name="search" size="1" title="search"></fa>
-										</button>
-									</span> <span class="input-group-btn">
-										<button type="button" ng-click="vm.StockHistoryLog.prodInfo = null "
-											class="btn btn-default ">
-											<fa name="remove" size="1" title="Reset"></fa>
-										</button>
-									</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label col-md-4">จำนวน:</label>
-							<div class="col-md-3">
-								<input type="text" class="form-control"
-									ng-model="vm.StockHistoryLog.amount" required="required" />
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label col-md-4">รายละเอียด:</label>
-							<div class="col-md-8">
-								<textarea rows="4" type="text" ng-model="vm.StockHistoryLog.detail"
-									class="form-control"></textarea>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label col-md-4">วันที่นำสินค้าออก:</label>
-							<div class="col-md-5">
-								<div class="input-group">
-									<input type="text" class="form-control"
-										uib-datepicker-popup="dd-MM-yyyy"
-										is-open="vm.startDate.opened" ng-model="vm.StockHistoryLog.operationDate"
-										readonly="readonly"> <span class="input-group-btn">
-										<button type="button" class="btn btn-default"
-											ng-click="vm.start($event)">
-											<i class="glyphicon glyphicon-calendar"></i>
-										</button>
-									</span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-12">
-						<div class="form-group">
-							<div class="col-md-6  text-right">
-								<button class="btn btn-default" type="submit" ng-disabled="vm.submitForm.$invalid">
-									<fa name="save" size="1" title="save"></fa>
-									บันทึก
-								</button>
-							</div>
-							<div class="col-md-5 text-center">
-								<button class="btn btn-default" type="reset" ng-disabled="vm.submitForm.$pristine" ng-click="vm.resetProd()" >
-									<fa name="remove" size="1" title="Reset"></fa>
-									ยกเลิก
-								</button>
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</form>
-			</uib-tab>
 			
 		 </uib-tabset>
 
