--- a/src/main/webapp/app/product_type/product_type.view.html
+++ b/src/main/webapp/app/product_type/product_type.view.html
@@ -61,7 +61,7 @@
 					<div class="col-md-1 text-center">
 						<button class="btn btn-default"
 							ng-click="vm.emp.id == null ? vm.resetForm() : vm.resetDefault()"
-							type="button" ng-disabled="vm.prodTypeForm.$pristine">
+							type="button">
 							<fa name="remove" size="1" title="Reset"></fa>
 							ยกเลิก
 						</button>
