--- a/src/main/webapp/app/trade/trade_system.view.html
+++ b/src/main/webapp/app/trade/trade_system.view.html
@@ -173,7 +173,7 @@
 					</div>
 					<div class="col-md-1 text-center">
 						<button class="btn btn-default" ng-click="vm.resetPage()"
-							type="button" ng-disabled="vm.orderList < 1">
+							type="button" >
 							<fa name="remove" size="1" title="Reset"></fa>
 							ยกเลิก
 						</button>
