--- a/src/main/webapp/app/product_type/product_type.view.html
+++ b/src/main/webapp/app/product_type/product_type.view.html
@@ -157,9 +157,11 @@
 								<fa name="edit"></fa>
 							</button>
 
-							<button class="btn btn-danger" ng-click="vm.remove(prodType.id)">
+<!-- 							<button class="btn btn-danger" ng-click="vm.remove(prodType)">
 								<fa name="trash-o"></fa>
-							</button></td>
+							</button> -->
+							
+							</td>
 					</tr>
 				</tbody>
 				<tfoot>
