--- a/src/main/webapp/app/user/user.view.html
+++ b/src/main/webapp/app/user/user.view.html
@@ -121,7 +121,7 @@
 					<div class="form-group">
 						<label class="control-label col-md-4">ยืนยันรหัสผ่าน</label>
 						<div class="col-md-8">
-							<input type="text" class="form-control"
+							<input type="password" class="form-control"
 								ng-model="vm.confirmPassword">
 						</div>
 					</div>
