--- a/src/main/webapp/app/trade/trade_system.view.html
+++ b/src/main/webapp/app/trade/trade_system.view.html
@@ -46,7 +46,7 @@
 										<fa name="search" size="1"></fa>
 									</button>
 								</span> <span class="input-group-btn"><button title="Reset"
-										ng-click="vm.order.customer = null ; getCust = flase" class="btn btn-default"
+										ng-click="vm.order.customer = null ; getCust = flase ; vm.order.customer.custName = null" class="btn btn-default"
 										type="button">
 										<fa name="remove" size="1"></fa>
 									</button></span>
