--- a/src/main/webapp/app/report/report.view.html
+++ b/src/main/webapp/app/report/report.view.html
@@ -278,7 +278,7 @@
 	<script src="./assets/js/smart-table.min.js"></script>
 
 	<script
-		src="http://www.fusioncharts.com/lib/fcassets/3.10.1/fusioncharts.js"></script>
-	<script src="./assets/js/angular-fusioncharts.min.js"></script>
+		src="http://www.fusioncharts.com/lib/fcassets/3.10.111/fusioncharts.js"></script>
+	<script src="./assets/js/angular-fusioncharts.min.js" type="text/javascript"></script>
 </body>
 </html>
